--- a/requirements.txt
+++ b/requirements.txt
@@ -12,17 +12,25 @@ async-timeout==4.0.3
 attrs==23.2.0
 Babel==2.14.0
 beautifulsoup4==4.12.3
+benepar==0.2.0
 bleach==6.1.0
+blis==0.7.11
+catalogue==2.0.10
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.16.0
 comm==0.2.2
+confection==0.1.4
+cymem==2.0.8
 datasets==2.18.0
 debugpy==1.8.1
 decorator==5.1.1
 defusedxml==0.7.1
 dill==0.3.8
 distro==1.9.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 evaluate==0.4.1
 exceptiongroup==1.2.0
 executing==2.0.1
@@ -56,6 +64,7 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.1.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.25.4
+langcodes==3.3.0
 lmppl==0.3.1
 MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
@@ -63,11 +72,13 @@ mistune==3.0.2
 mpmath==1.3.0
 multidict==6.0.5
 multiprocess==0.70.16
+murmurhash==1.0.10
 nbclient==0.10.0
 nbconvert==7.16.2
 nbformat==5.10.3
 nest-asyncio==1.6.0
 networkx==3.2.1
+nltk==3.8.1
 notebook==7.1.2
 notebook_shim==0.2.4
 numpy==1.26.4
@@ -80,6 +91,7 @@ parso==0.8.3
 pexpect==4.9.0
 pillow==10.2.0
 platformdirs==4.2.0
+preshed==3.0.9
 prometheus_client==0.20.0
 prompt-toolkit==3.0.43
 protobuf==3.19.6
@@ -110,28 +122,40 @@ scipy==1.12.0
 Send2Trash==1.8.2
 sentencepiece==0.2.0
 six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.1
 soupsieve==2.5
+spacy==3.7.4
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
 stack-data==0.6.3
+svgling==0.4.0
+svgwrite==1.4.3
 sympy==1.12
 terminado==0.18.1
+thinc==8.2.3
 threadpoolctl==3.3.0
 tinycss2==1.2.1
 tokenizers==0.15.2
 tomli==2.0.1
 torch==2.2.1+cpu
+torch-struct==0.5
 torchaudio==2.2.1+cpu
 torchvision==0.17.1+cpu
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
 transformers==4.38.2
+typer==0.9.0
 types-python-dateutil==2.9.0.20240316
 typing_extensions==4.10.0
 tzdata==2024.1
 uri-template==1.3.0
 urllib3==2.2.1
+wasabi==1.1.2
 wcwidth==0.2.13
+weasel==0.3.4
 webcolors==1.13
 webencodings==0.5.1
 websocket-client==1.7.0
