--- a/sic_cluster/environment.yml
+++ b/sic_cluster/environment.yml
@@ -6,140 +6,167 @@ channels:
   - defaults
 dependencies:
   - pip:
-    - accelerate==0.28.0
-    - aiohttp==3.9.3
-    - aiosignal==1.3.1
-    - annotated-types==0.6.0
-    - anyio==4.3.0
-    - argon2-cffi==23.1.0
-    - argon2-cffi-bindings==21.2.0
-    - arrow==1.3.0
-    - asttokens==2.4.1
-    - async-lru==2.0.4
-    - async-timeout==4.0.3
-    - attrs==23.2.0
-    - Babel==2.14.0
-    - beautifulsoup4==4.12.3
-    - bleach==6.1.0
-    - certifi==2024.2.2
-    - cffi==1.16.0
-    - charset-normalizer==3.3.2
-    - comm==0.2.2
-    - datasets==2.18.0
-    - debugpy==1.8.1
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - dill==0.3.8
-    - distro==1.9.0
-    - evaluate==0.4.1
-    - exceptiongroup==1.2.0
-    - executing==2.0.1
-    - fastjsonschema==2.19.1
-    - filelock==3.13.1
-    - fqdn==1.5.1
-    - frozenlist==1.4.1
-    - fsspec==2024.2.0
-    - h11==0.14.0
-    - httpcore==1.0.4
-    - httpx==0.27.0
-    - huggingface-hub==0.21.4
-    - idna==3.6
-    - importlib_metadata==7.0.2
-    - ipykernel==6.29.3
-    - ipython==8.18.1
-    - isoduration==20.11.0
-    - jedi==0.19.1
-    - Jinja2==3.1.3
-    - joblib==1.3.2
-    - json5==0.9.22
-    - jsonpointer==2.4
-    - jsonschema==4.21.1
-    - jsonschema-specifications==2023.12.1
-    - jupyter-events==0.9.1
-    - jupyter-lsp==2.2.4
-    - jupyter_client==8.6.1
-    - jupyter_core==5.7.2
-    - jupyter_server==2.13.0
-    - jupyter_server_terminals==0.5.3
-    - jupyterlab==4.1.5
-    - jupyterlab_pygments==0.3.0
-    - jupyterlab_server==2.25.4
-    - lmppl==0.3.1
-    - MarkupSafe==2.1.5
-    - matplotlib-inline==0.1.6
-    - mistune==3.0.2
-    - mpmath==1.3.0
-    - multidict==6.0.5
-    - multiprocess==0.70.16
-    - nbclient==0.10.0
-    - nbconvert==7.16.2
-    - nbformat==5.10.3
-    - nest-asyncio==1.6.0
-    - networkx==3.2.1
-    - notebook==7.1.2
-    - notebook_shim==0.2.4
-    - numpy==1.26.4
-    - openai==1.14.1
-    - overrides==7.7.0
-    - packaging==24.0
-    - pandas==2.2.1
-    - pandocfilters==1.5.1
-    - parso==0.8.3
-    - pexpect==4.9.0
-    - pillow==10.2.0
-    - platformdirs==4.2.0
-    - prometheus_client==0.20.0
-    - prompt-toolkit==3.0.43
-    - protobuf==3.19.6
-    - psutil==5.9.8
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
-    - pyarrow==15.0.1
-    - pyarrow-hotfix==0.6
-    - pycparser==2.21
-    - pydantic==2.6.4
-    - pydantic_core==2.16.3
-    - Pygments==2.17.2
-    - python-dateutil==2.9.0.post0
-    - python-json-logger==2.0.7
-    - pytz==2024.1
-    - PyYAML==6.0.1
-    - pyzmq==25.1.2
-    - referencing==0.33.0
-    - regex==2023.12.25
-    - requests==2.31.0
-    - responses==0.18.0
-    - rfc3339-validator==0.1.4
-    - rfc3986-validator==0.1.1
-    - rpds-py==0.18.0
-    - safetensors==0.4.2
-    - scikit-learn==1.4.1.post1
-    - scipy==1.12.0
-    - Send2Trash==1.8.2
-    - sentencepiece==0.2.0
-    - six==1.16.0
-    - sniffio==1.3.1
-    - soupsieve==2.5
-    - stack-data==0.6.3
-    - sympy==1.12
-    - terminado==0.18.1
-    - threadpoolctl==3.3.0
-    - tinycss2==1.2.1
-    - tokenizers==0.15.2
-    - tomli==2.0.1
-    - tornado==6.4
-    - tqdm==4.66.2
-    - traitlets==5.14.2
-    - transformers==4.38.2
-    - types-python-dateutil==2.9.0.20240316
-    - typing_extensions==4.10.0
-    - tzdata==2024.1
-    - uri-template==1.3.0
-    - urllib3==2.2.1
-    - wcwidth==0.2.13
-    - webcolors==1.13
-    - webencodings==0.5.1
-    - websocket-client==1.7.0
-    - xxhash==3.4.1
-    - yarl==1.9.4
-    - zipp==3.18.1
+      - accelerate==0.28.0
+      - aiohttp==3.9.3
+      - aiosignal==1.3.1
+      - annotated-types==0.6.0
+      - anyio==4.3.0
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - asttokens==2.4.1
+      - async-lru==2.0.4
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - Babel==2.14.0
+      - beautifulsoup4==4.12.3
+      - benepar==0.2.0
+      - bleach==6.1.0
+      - blis==0.7.11
+      - catalogue==2.0.10
+      - certifi==2024.2.2
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - cloudpathlib==0.16.0
+      - comm==0.2.2
+      - confection==0.1.4
+      - cymem==2.0.8
+      - datasets==2.18.0
+      - debugpy==1.8.1
+      - decorator==5.1.1
+      - defusedxml==0.7.1
+      - dill==0.3.8
+      - distro==1.9.0
+      - en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
+      - evaluate==0.4.1
+      - exceptiongroup==1.2.0
+      - executing==2.0.1
+      - fastjsonschema==2.19.1
+      - filelock==3.13.1
+      - fqdn==1.5.1
+      - frozenlist==1.4.1
+      - fsspec==2024.2.0
+      - h11==0.14.0
+      - httpcore==1.0.4
+      - httpx==0.27.0
+      - huggingface-hub==0.21.4
+      - idna==3.6
+      - importlib_metadata==7.0.2
+      - ipykernel==6.29.3
+      - ipython==8.18.1
+      - isoduration==20.11.0
+      - jedi==0.19.1
+      - Jinja2==3.1.3
+      - joblib==1.3.2
+      - json5==0.9.22
+      - jsonpointer==2.4
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
+      - jupyter-events==0.9.1
+      - jupyter-lsp==2.2.4
+      - jupyter_client==8.6.1
+      - jupyter_core==5.7.2
+      - jupyter_server==2.13.0
+      - jupyter_server_terminals==0.5.3
+      - jupyterlab==4.1.5
+      - jupyterlab_pygments==0.3.0
+      - jupyterlab_server==2.25.4
+      - langcodes==3.3.0
+      - lmppl==0.3.1
+      - MarkupSafe==2.1.5
+      - matplotlib-inline==0.1.6
+      - mistune==3.0.2
+      - mpmath==1.3.0
+      - multidict==6.0.5
+      - multiprocess==0.70.16
+      - murmurhash==1.0.10
+      - nbclient==0.10.0
+      - nbconvert==7.16.2
+      - nbformat==5.10.3
+      - nest-asyncio==1.6.0
+      - networkx==3.2.1
+      - nltk==3.8.1
+      - notebook==7.1.2
+      - notebook_shim==0.2.4
+      - numpy==1.26.4
+      - openai==1.14.1
+      - overrides==7.7.0
+      - packaging==24.0
+      - pandas==2.2.1
+      - pandocfilters==1.5.1
+      - parso==0.8.3
+      - pexpect==4.9.0
+      - pillow==10.2.0
+      - platformdirs==4.2.0
+      - preshed==3.0.9
+      - prometheus_client==0.20.0
+      - prompt-toolkit==3.0.43
+      - protobuf==3.19.6
+      - psutil==5.9.8
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.2
+      - pyarrow==15.0.1
+      - pyarrow-hotfix==0.6
+      - pycparser==2.21
+      - pydantic==2.6.4
+      - pydantic_core==2.16.3
+      - Pygments==2.17.2
+      - python-dateutil==2.9.0.post0
+      - python-json-logger==2.0.7
+      - pytz==2024.1
+      - PyYAML==6.0.1
+      - pyzmq==25.1.2
+      - referencing==0.33.0
+      - regex==2023.12.25
+      - requests==2.31.0
+      - responses==0.18.0
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.18.0
+      - safetensors==0.4.2
+      - scikit-learn==1.4.1.post1
+      - scipy==1.12.0
+      - Send2Trash==1.8.2
+      - sentencepiece==0.2.0
+      - six==1.16.0
+      - smart-open==6.4.0
+      - sniffio==1.3.1
+      - soupsieve==2.5
+      - spacy==3.7.4
+      - spacy-legacy==3.0.12
+      - spacy-loggers==1.0.5
+      - srsly==2.4.8
+      - stack-data==0.6.3
+      - svgling==0.4.0
+      - svgwrite==1.4.3
+      - sympy==1.12
+      - terminado==0.18.1
+      - thinc==8.2.3
+      - threadpoolctl==3.3.0
+      - tinycss2==1.2.1
+      - tokenizers==0.15.2
+      - tomli==2.0.1
+      - torch==2.2.1+cpu
+      - torch-struct==0.5
+      - torchaudio==2.2.1+cpu
+      - torchvision==0.17.1+cpu
+      - tornado==6.4
+      - tqdm==4.66.2
+      - traitlets==5.14.2
+      - transformers==4.38.2
+      - typer==0.9.0
+      - types-python-dateutil==2.9.0.20240316
+      - typing_extensions==4.10.0
+      - tzdata==2024.1
+      - uri-template==1.3.0
+      - urllib3==2.2.1
+      - wasabi==1.1.2
+      - wcwidth==0.2.13
+      - weasel==0.3.4
+      - webcolors==1.13
+      - webencodings==0.5.1
+      - websocket-client==1.7.0
+      - xxhash==3.4.1
+      - yarl==1.9.4
+      - zipp==3.18.1
